--- a/contáctenos.html
+++ b/contáctenos.html
@@ -50,7 +50,7 @@
 			</section><!--/info-->
 			<footer>
 				<p>
-					(c) Todos los derechos reservados - Jhojan Yauri 2020 <br> Diseñado por <a href="https://www.facebook.com/jhojan.yauriaylas.3">mi</a>
+					(c) Todos los derechos reservados - Rosalynn Aylas Espejo 2020 <br> Diseñado por <a href="https://www.facebook.com/jhojan.yauriaylas.3">Jhojan Yauri</a>
 				</p>
 	</body>		
 </html>	
