--- a/nosotros.html
+++ b/nosotros.html
@@ -37,6 +37,6 @@
 					</p>
 				</section>
 				
-				<p class="referencia">
-					(c) Todos los derechos reservados - Jhojan Yauri 2020 <br> Diseñado por <a href="https://www.facebook.com/jhojan.yauriaylas.3">mi</a>
+				<p>
+					(c) Todos los derechos reservados - Rosalynn Aylas Espejo 2020 <br> Diseñado por <a href="https://www.facebook.com/jhojan.yauriaylas.3">Jhojan Yauri</a>
 				</p>
