--- a/servicios.html
+++ b/servicios.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+|<!DOCTYPE html>
 <html>
 	<head>
 		<title></title>
@@ -24,7 +24,35 @@
 					</ul>
 				</nav>
 			</header>
-			<section id="izq-1">
+			<section id="categorias">
+				<section class="uno">
+					<img src="img/cuy.JPG" width="290" height="200">
+					<h2>Conozca los tipos de cuyes en venta</h2>
+					<p class="parrafo">
+						Contamos con muchos, de diferentes tamaños, razas y precios. Si le interesa conocer más de nuestro catálogo de venta, haga un click en el siguiente botón:
+					</p>
+					<a href="Tipos%20de%20cuyes%20en%20venta.html" class="conocer-más">conocer más</a><br><br>
+				</section>
+				<section class="uno dos">
+					<img src="img/front.JPG" width="290" height="200">
+					<h2>Conozca nuestra misión y visión</h2>
+					<p class="parrafo">
+						El negocio tiene una misión, visión y principios éticos lo que nos hace diferentes a la competencia, si desea conocerlos pulse el botón que está a continuación
+					</p>
+					<a href="Conozca%20nuestra%20misi%C3%B3n%20y%20visi%C3%B3n.html" class="conocer-más">conocer más</a><br><br>
+				</section>
+				<section class="uno">
+					<img src="img/imagens.JPG" width="290" height="200">
+					<h2>Conozca como y donde son criados</h2>
+					<p class="parrafo">
+						Tiene un cuidado especial, en un espacio natural, no utilizamos hormonas de crecimiento. Si necesita convencerse haga un click en el siguiente botón:
+					</p>
+					<a href="donde%20son%20criados.html" class="conocer-más">conocer más</a><br><br>
+				</section>
+			</section><!--/categorias-->
+
+			<section id="info">
+				<section id="izq-1">
 
 						<img src="img/3344Captura.JPG" align="right" width="250" class="img">
 						<h1>¿Cuáles son nuestros servicios?</h1>
@@ -34,6 +62,6 @@
 					</p>
 				</section>
 				
-				<p class="referencia">
-					(c) Todos los derechos reservados - Jhojan Yauri 2020 <br> Diseñado por <a href="https://www.facebook.com/jhojan.yauriaylas.3">mi</a>
+				<p>
+					(c) Todos los derechos reservados - Rosalynn Aylas Espejo 2020 <br> Diseñado por <a href="https://www.facebook.com/jhojan.yauriaylas.3">Jhojan Yauri</a>
 				</p>
