--- a/Tipos de cuyes en venta.html
+++ b/Tipos de cuyes en venta.html
@@ -27,7 +27,7 @@
 					<img src="img/5Captura.JPG" align="left" width="290" height="200">
 					<h2>Cuyes blancos</h2>
 					<p class="parrafo">
-						Se caracteriza por el color de su pelaje, estos son más solicitados para la crianza que los colorados. El precio es directamente proporcional al tamaño
+						Se caracteriza por el color de su pelaje, estos son más solicitados para la crianza que los colorados. El precio varia entre: (20-25 soles c/u)
 					</p>
 					<a href="cont%C3%A1ctenos.html" class="coordinar-compra">coordinar compra</a><br><br>
 				</section>
@@ -35,7 +35,7 @@
 					<img src="img/cuy.JPG" align="right" width="290" height="200">
 					<h2>Cuyes negros</h2>
 					<p class="parrafo">
-						Los de pelaje negro son más cotizados, para el consumo, pues este tiene más propiedades nutritivas en su carne. Por ello el precio es ligeramente más alto.
+						Los de pelaje negro son más cotizados, para el consumo, pues este tiene más propiedades nutritivas en su carne. El precio varia entre (22-27 soles c/u).
 					</p>
 					<a href="cont%C3%A1ctenos.html" class="coordinar-compra">coordinar compra</a><br><br>
 				</section>
@@ -43,7 +43,7 @@
 					<img src="img/7Captura.JPG" align="right" width="290" height="200">
 					<h2>Cuyes colorados</h2>
 					<p class="parrafo">
-						Quizá el más común; pero este al igual que el negro tiene propiedades nutritivas que combaten la anemia. El precio es relativo a su tamaño.
+						Quizá el más común; pero este al igual que el negro tiene propiedades nutritivas que combaten la anemia. . El precio varia entre (21-26 soles c/u)
 					</p>
 					<a href="cont%C3%A1ctenos.html" class="coordinar-compra">coordinar compra</a><br><br>
 				</section>
@@ -51,7 +51,7 @@
 					<img src="img/11Captura.JPG" align="right" width="290" height="200">
 					<h2>Maltones</h2>
 					<p class="parrafo">
-						Son los cuyes jóvenes, tenemos maltones de cada clase presentada anteriormente; su trascendencia recae en que puede ser utilizado perfectamente para la crianza y para el consumo; aunque mayormente es utilizado para lo segundo, por la suavidad de su carne.
+						Son los cuyes jóvenes, tenemos maltones de cada clase presentada anteriormente; su trascendencia recae en que puede ser utilizado perfectamente para la crianza y para el consumo; aunque mayormente es utilizado para lo segundo, por la suavidad de su carne. El precio varia entre (25-30 soles c/u)
 					</p>
 					<a href="cont%C3%A1ctenos.html" class="coordinar-compra">coordinar compra</a><br><br>
 				</section>
@@ -59,7 +59,7 @@
 					<img src="img/Captura.JPG" align="right" width="290" height="200">
 					<h2>Preñadas</h2></h2>
 					<p class="parrafo">
-						Tenemos preñadas de cada clase; su uso es exclusivo para la crianza hasta que tenga a su bebe. Es recomendable llevar un par de estas y un macho, si lo que busca es aumentar su población de cuyes. Si desea ordenar uno o conocer su precio haga un click en el botón de abajo.
+						Tenemos preñadas de cada clase; su uso es exclusivo para la crianza hasta que tenga a su bebe. Es recomendable llevar un par de estas y un macho, si lo que busca es aumentar su población de cuyes. Si desea ordenar uno haga un click en el botón de abajo. El precio varia entre (28-35 soles c/u)
 					</p>
 					<a href="cont%C3%A1ctenos.html" class="coordinar-compra">coordinar compra</a><br><br>
 				</section>
@@ -67,11 +67,11 @@
 					<img src="img/123Captura.JPG" align="right" width="290" height="200">
 					<h2>Crias</h2>
 					<p class="parrafo">
-						Son los cuyes bebes; quiénes son totalmente dependientes de sus madres; por lo que sería recomendable llevarsela a ella también. Pero se le puede ofrecer crias a partir de los 15 días de vida. Para consultar su precio o tramitar su transacción haga un click en el botón.
+						Son los cuyes bebes; quiénes son totalmente dependientes de sus madres; por lo que sería recomendable llevarsela a ella también. Pero se le puede ofrecer crias a partir de los 15 días de vida. Para consultar su precio o tramitar su transacción haga un click en el botón. El precio varia entre (10-15 soles c/u)
 					</p>
 					<a href="cont%C3%A1ctenos.html" class="coordinar-compra">coordinar compra</a><br><br>
 				</section>
-				<p class="referencia">
-					 (c) Todos los derechos reservados - Jhojan Yauri 2020 <br> Diseñado por <a href="https://www.facebook.com/jhojan.yauriaylas.3">mi</a>
+				<p>
+					(c) Todos los derechos reservados - Rosalynn Aylas Espejo 2020 <br> Diseñado por <a href="https://www.facebook.com/jhojan.yauriaylas.3">Jhojan Yauri</a>
 				</p>
 				
