--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 	<head>
 		<title></title>
-		<script src="js/bienvenida.js"></script>
-		<link rel="stylesheet" type="text/css" href="css/estilo.css">
+		<link rel="stylesheet" type="text/css" href="css/estilo.css"> 
 	</head>
 	<body>
 		<div id="principal">
@@ -26,40 +25,13 @@
 			</header>
 
 			<section id="slide">
-				<img src="img/fondo mejorado.jpg" width="900" height="370">
+				
+					<img src="img/fondo mejorado.jpg" width="900" height="370">
+				
 			</section>
-
-			<section id="categorias">
-				<section class="uno">
-					<img src="img/cuy.JPG" width="290" height="200">
-					<h2>Conozca los tipos de cuyes en venta</h2>
-					<p class="parrafo">
-						Contamos con muchos, de diferentes tamaños, razas y precios. Si le interesa conocer más de nuestro catálogo de venta, haga un click en el siguiente botón:
-					</p>
-					<a href="Tipos%20de%20cuyes%20en%20venta.html" class="conocer-más">conocer más</a><br><br>
-				</section>
-				<section class="uno dos">
-					<img src="img/front.JPG" width="290" height="200">
-					<h2>Conozca nuestra misión y visión</h2>
-					<p class="parrafo">
-						El negocio tiene una misión, visión y principios éticos lo que nos hace diferentes a la competencia, si desea conocerlos pulse el botón que está a continuación
-					</p>
-					<a href="Conozca%20nuestra%20misi%C3%B3n%20y%20visi%C3%B3n.html" class="conocer-más">conocer más</a><br><br>
-				</section>
-				<section class="uno">
-					<img src="img/imagens.JPG" width="290" height="200">
-					<h2>Conozca como y donde son criados</h2>
-					<p class="parrafo">
-						Tiene un cuidado especial, en un espacio natural, no utilizamos hormonas de crecimiento. Si necesita convencerse haga un click en el siguiente botón:
-					</p>
-					<a href="donde%20son%20criados.html" class="conocer-más">conocer más</a><br><br>
-				</section>
-			</section><!--/categorias-->
-
-			<section id="info">
-				<section id="izq">
-
-						<img src="img/cuy cuy.jpg" align="left" width="250" class="img">
+			
+			<section id="izq">	
+					<img src="img/cuy cuy.jpg" align="left" width="250" class="img">
 						<h1>¿Qué es un cuy?</h1>
 					<p class="parrafo">
 						El cuy, también es conocido en otros paices como, cuye, cobaya, cobayo, conejillo de indias, guinea pig y científicamente tiene por nombre Cavia porcellus, de ahí sus derivaciones. Es originaria de regiones andinas de América del Sur como Bolivia Ecuador, Colombia y Peú
@@ -69,11 +41,11 @@
 				</section>
 				<section id="der">
 					<h2>Video de la semana</h2>
-					<iframe width="290" height="290" src="https://www.youtube.com/embed/3SAyA8pPXt4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></section>
+					<iframe width="290" height="390" src="https://www.youtube.com/embed/3SAyA8pPXt4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></section>
 			</section><!--/info-->
 			<footer>
 				<p>
-					(c) Todos los derechos reservados - Jhojan Yauri 2020 <br> Diseñado por <a href="https://www.facebook.com/jhojan.yauriaylas.3">mi</a>
+					(c) Todos los derechos reservados - Rosalynn Aylas Espejo 2020 <br> Diseñado por <a href="https://www.facebook.com/jhojan.yauriaylas.3">Jhojan Yauri</a>
 				</p>
 			</footer>
 
