--- a/contáctenos.html
+++ b/contáctenos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<title>Formulario de contacto</title>
 		<script src="text/bienvenida.js"></script>
