--- a/gracias.html
+++ b/gracias.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 	<head>
 		<title></title>
-		<script src="text/bienvenida.js"></script>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1,maximum-scale=1, maximum-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	</head>
 	<body>
