--- a/contáctenos.html
+++ b/contáctenos.html
@@ -42,7 +42,7 @@
 						<a href="https://www.facebook.com/El-campe%C3%B3n-de-los-andes-101487964947644" class="coordinar-compra">Ir a facebook</a>
 						<br><br>
 						<br><br>
-						<a href="mailto:cjun.jhojan.aylas@gmail.com" class="coordinar-compra">Ir a gmail</a>
+						<a href="mailto:cjun.jhojan.aylas.p20@gmail.com" class="coordinar-compra">Ir a gmail</a>
 						
 
 					</p>
