--- a/contáctenos.html
+++ b/contáctenos.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Formulario de contacto</title>
-		<script src="text/bienvenida.js"></script>
+		<title></title>
+		
 		<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	</head>
 	<body>
@@ -24,22 +24,14 @@
 					</ul>
 				</nav>
 			</header>
-		<form method="post">
-			<h2>CONTACTO</h2>
-			<input type="text" placeholder="name" name="name" required="">
-			<input type="email" placeholder="email" name="email" required="">
-			<input type="text" placeholder="asunto" name="asunto" required="">
-			<textarea placeholder="mensaje" name="msg"></textarea>
-			<input type="submit" value="enviar" id="boton">
-		</form>
-		<?php
-		include("enviar.php");
-		?>
+		
 			<section id="info">
 				<section id="izq-1">
 
 						<img src="img/cuy cuy.jpg" align="right" width="250" class="img">
-						<h1>Puede contactarnos con:</h1>
+						<h1>
+						Puede contactarnos desde whatsapp o directamente por llamada telefónica con los números que muestran debajo, o podria hacer un click en el botón "Ir a facebook, para poder mantenernos en contacto y atender a su pedido, o si es de su preferencia, hacer un click "Ir a gmail" para enviar un mensaje o pedido a Rosalynn desde gmail, ¡Estamos pendientes a su pedido!
+						</h1>
 					<p class="parrafo-2">
 						-Número: 957633934-973966044<br><br>
 						<a href="https://www.facebook.com/El-campe%C3%B3n-de-los-andes-101487964947644" class="coordinar-compra">Ir a facebook</a>
