--- a/contáctenos.html
+++ b/contáctenos.html
@@ -26,21 +26,35 @@
 			</header>
 		
 			<section id="info">
-				<section id="izq-1">
+				<section id="izq-2">
 
 						<img src="img/cuy cuy.jpg" align="right" width="250" class="img">
 						<h1>
-						Puede contactarnos desde whatsapp o directamente por llamada telefónica con los números que muestran debajo, o podria hacer un click en el botón "Ir a facebook, para poder mantenernos en contacto y atender a su pedido, o si es de su preferencia, hacer un click "Ir a gmail" para enviar un mensaje o pedido a Rosalynn desde gmail, ¡Estamos pendientes a su pedido!
+						<p class="parrafo">
+						Puede contactarnos directamente por llamada telefónica con los números que muestran debajo, o podria hacer un click uno de los botones que se muestran debajo para dirigirse a gmail, facebook, o whatsapp del negocio, adicionalmente puede encontrar correos de contacto, así como una opción con el logo de "ubicación" para conocer donde radica el negocio y como coordinar la compra, para poder mantenernos en contacto y atender a su pedido ¡Estamos pendientes a su pedido!
+						<p/>
 						</h1>
-					<p class="parrafo-2">
-						-Número: 957643934-973966044<br><br>
-						<a href="https://www.facebook.com/El-campe%C3%B3n-de-los-andes-101487964947644" class="coordinar-compra">Ir a facebook</a>
-						<br><br>
-						<br><br>
-						<a href="mailto:cjun.jhojan.aylas.p20@gmail.com" class="coordinar-compra">Ir a gmail</a>
-						
 
+
+					<p class="parrafo-2">
+						-Número de contacto: 957643934-973966044<br><br>
+						-Gmail:<br><br> 
+						*cjun.jhojan.yauri.p20@gmail.com
+
+						*yuraccunya@gmail.com
+
+						*71704633@junin.coar.edu.pe
+
+						*cjun.jhojan.aylas.p20@gmail.com
 					</p>
+						 <div class="icono">
+        
+        <a href="https://www.facebook.com/El-campe%C3%B3n-de-los-andes-101487964947644"> <img src="img/fb icono.jpg" width="150"	id="Facebook"> </a>
+        <a href="mailto:cjun.jhojan.aylas.p20@gmail.com"> <img src="img/gmail ícono.jpg" id="gmail" width="150"> </a>
+        <a href="https://wa.me/51973966044"> <img src="img/whatsapp ícono.jpg" width="150" id="whatsapp"> </a>
+        <a href="https://wa.me/51957643934"> <img src="img/whats.jpg" width="150" id="whatsapp"> </a>
+        <a href="Localización del negocio.html"> <img src="img/google maps.jpg"  width="150" id="Información"> </a>
+        </div>
 				</section>
 			</section><!--/info-->
 			<footer>
