--- a/nosotros.html
+++ b/nosotros.html
@@ -24,16 +24,31 @@
 					</ul>
 				</nav>
 			</header>
+			
 			<section id="izq-1">
 
 						<img src="img/fondo mejorado.jpg" align="left" width="250" class="img">
 						<h1>¿Cómo empezamos?</h1>
 					<p class="parrafo">
 						Empezamos hace menos de 20 años con un par de cuyes en casa. Pero nuestro objetivo de  realizar una fuente de ingresos al hogar con la crianza de estos tiernos roedores surgió al cabo de un par de meses pues ya teniamos más 30. El alimento diario suponia un fuerte capital al cabo de un mes; por lo que decidimos vender a los más grandes. Y los ingresos resultaron mayores que el capital invertido; por lo que se considero factible realizar un negocio con los cuyes. Por eso se optó por adecuar más cuartos en caza exclusivos para ellos, así como empezar a constriur jaulas de madera para ir clasificarlos para su venta. 
-						<br><br>
+						
 						Así pasamos más de 15 años en las ferias dominicales de jauja; pues ahí se nos brinda la oportunidad vender los cuyes. De ese modo fuimos teniendo más y más consumidores potenciales, con quiénes cada semana ya teníamos por lo menos 25 ventas seguras.
 						<br><br>
 						Nuestros consumidores potenciales; tenian otros consumidores potenciales donde destacan demás empresas en Junín y restaurantes, a quienes se les ofrecía nuestros cuyes por precios mucho mayores; que lo que nosotros realmente les brindabamos. Pero ¿porque no ser nosotros quienes entablen relaciones con esos consumidores? Por ello decidimos formalizar el negocio que está al mando mio: Rosalynn Aylas Espejo para así lograr nuestros objetivos como futura empresa. Dando un paso más; en nuestro largo camino, este paso consiste en buscar métodos para que el negocio sea reconocido; asímismo, ampliar el listado de nuestros clientes.     
+					</p>
+				<img src="img/1Captura.JPG" align="right" width="250" class="img">
+						<h1>Misión</h1>
+					<p class="parrafo">
+						Se creo el negocio con la finalidad aumentar los ingresos con la crianza y venta de cuyes. Nuestro negocio pasó por una serie de transiciones para llegar hasta este punto, el cual es ofrecer  cuyes  a un público más grande como son, restaurantes o grandes entidades que tambíén que también estan en el rubro para entablar relaciones comerciales. Sin descuidar claro a los clientes minoristas que también buscan cuyes.
+						Lograremos nuestro objetivo con su apoyo que consiste en compartir esta página web con sus demás contactos; para seguir hacer creciendo este negocio que nació hace más 15 años que empezó con un par de cuyes, y que ahora busca dar un paso más en este emocionante rubro el cual es criar y vender cuyes. 
+					</p>
+				</section>
+				<img src="img/cuy.JPG" align="left" width="250" class="img">
+						<h1>Visión</h1>
+					<p class="parrafo">
+						Formar un negocio referente de calidad, que realice exportaciones a otras ciudades o provincias del Perú. Además de ser reconocida por restaurantes, clientes y demás empresas. Por el buen y consciente trabajo que estamos realizando.
+						Nuestros valores éticos consisten en no alimentar o inyectar a los cuyes con sustancias químicas que aceleren el crecimiento y otros efectos que ponga en peligro la vida del roedor y el consumidor. Pues si bien es cierto la mayoria de ventas de los cuyes es para el consumo.
+						Se plantea a futuro convertir este a negocio en empresa dedicada integralmente a la venta, compra y crianza de cuyes; llegando a ofrecer también medicamentos para algunas enfermedades puedan contraer. En general todo para el buen desarrollo de un cuy bajo cualquier circunstancia.
 					</p>
 				</section>
 				
