--- a/clientes.html
+++ b/clientes.html
@@ -30,7 +30,7 @@
 					<img src="img/1919Captura.JPG" width="290" height="200">
 					<h2>Restaurantes</h2>
 					<p class="parrafo-1">
-						El cuy tiene muchas propiedades nutritivas en su carne capás de tratar la anemia u otras enfermedades; además de fortalecer el sistema inmunóligico cabe recalcar que es un rico y costoso platillo tradicional muy cotizado en restaurantes con esta temática.  
+						El cuy tiene muchas propiedades nutritivas en su carne capás de tratar la anemia u otras enfermedades; además de fortalecer el sistema inmunóligico cabe recalcar que es un rico y costoso platillo tradicional muy cotizado en restaurantes con esta temática. Anteriormenta ya hemos brindado servicios al resaturante jaujino "Las rocas"
 					</p>
 					
 				</section>
@@ -38,14 +38,14 @@
 					<img src="img/2020Captura.JPG" width="290" height="200">
 					<h2>Clientes minoristas</h2>
 					<p class="parrafo-1">
-						Son aquellos clientes que buscan una mascota; o quieren incursionar con este encantador negocio, que genera buenos ingresos al hogar.
+						Son aquellos clientes que buscan una mascota; o quieren incursionar con este encantador negocio, que genera buenos ingresos al hogar. O incluso quienes necesitan un cuy para algún evento social, o comída familiar, pues su carne es muy nutritiva rica. Se ha brindado servicio a familiares y compradores en las ferias.
 					</p>
 				</section>
 				<section class="uno">
 					<img src="img/2121Captura.JPG" width="290" height="200">
 					<h2>clientes mayoristas</h2>
 					<p class="parrafo-1">
-						Son aquellos que buscan adquirir una cantidad fuerte de cuyes para su consumo o crianza. Cabe recalcar que se realizaran descuentos a aquellos que lleven más de 15 cuyes de cualquier tipo.
+						Son aquellos que buscan adquirir una cantidad fuerte de cuyes para su consumo o crianza. Cabe recalcar que se realizaran descuentos a aquellos que lleven más de 15 cuyes de cualquier tipo. Desde hace mucho se ha estado brindando servicios a contados clientes de las ferias dominales de jauja.
 					</p>
 					
 				</section>
