--- a/servicios.html
+++ b/servicios.html
@@ -34,12 +34,12 @@
 					<a href="Tipos%20de%20cuyes%20en%20venta.html" class="conocer-más">conocer más</a><br><br>
 				</section>
 				<section class="uno dos">
-					<img src="img/front.JPG" width="290" height="200">
-					<h2>Conozca nuestra misión y visión</h2>
+					<img src="img/222Captura.JPG" width="290" height="200">
+					<h2>Conozca como están clasificados</h2>
 					<p class="parrafo">
-						El negocio tiene una misión, visión y principios éticos lo que nos hace diferentes a la competencia, si desea conocerlos pulse el botón que está a continuación
+						El negocio tiene una forma de clasificar a los cuyes, y haciendo clic en el botón que se muestra debajo podría conocer, cual es la importancia de su debida clasificación
 					</p>
-					<a href="Conozca%20nuestra%20misi%C3%B3n%20y%20visi%C3%B3n.html" class="conocer-más">conocer más</a><br><br>
+					<a href="Conozca como están clasificados.html" class="conocer-más">conocer más</a><br><br>
 				</section>
 				<section class="uno">
 					<img src="img/imagens.JPG" width="290" height="200">
@@ -52,7 +52,7 @@
 			</section><!--/categorias-->
 
 			<section id="info">
-				<section id="izq-1">
+				<section id="izq-2">
 
 						<img src="img/3344Captura.JPG" align="right" width="250" class="img">
 						<h1>¿Cuáles son nuestros servicios?</h1>
