--- a/contáctenos.html
+++ b/contáctenos.html
@@ -38,16 +38,21 @@
 
 					<p class="parrafo-2">
 						-Número de contacto: 957643934-973966044<br><br>
-						-Gmail:<br><br> 
+						-Gmail: <br><br>
 						*cjun.jhojan.yauri.p20@gmail.com
 
 						*yuraccunya@gmail.com
 
 						*71704633@junin.coar.edu.pe
 
-						*cjun.jhojan.aylas.p20@gmail.com
+						*cjun.jhojan.aylas.p20@gmail.com<br><br>
+						-Mapa web:
+					<div id="map">	
 					</p>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3905.725820227662!2d-75.49648168562192!3d-11.78434534028167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x910ecdd84570d729%3A0xd0359c6093466d0a!2sJR.%20ALEJO%20MARTINEZ%20145%2C%20Jauja%2012601!5e0!3m2!1ses-419!2spe!4v1601380019495!5m2!1ses-419!2spe" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"  align="center"></iframe>
+					</div>
 						 <div class="icono">
+
         
         <a href="https://www.facebook.com/El-campe%C3%B3n-de-los-andes-101487964947644"> <img src="img/fb icono.jpg" width="150"	id="Facebook"> </a>
         <a href="mailto:cjun.jhojan.aylas.p20@gmail.com"> <img src="img/gmail ícono.jpg" id="gmail" width="150"> </a>
