--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 				</section>
 				<section id="der">
 					<h2>Video de la semana</h2>
-					<iframe width="290" height="390" src="https://www.youtube.com/embed/3SAyA8pPXt4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></section>
-			</section><!--/info-->
-			<footer>
+					<iframe width="290" height="270" src="https://www.youtube.com/embed/3SAyA8pPXt4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></section>
+			</section>
 
-			</footer>
-
+				<p align="right">
+					(c) Todos los derechos reservados - Rosalynn Aylas Espejo 2020 <br> Diseñado por <a href="https://www.facebook.com/jhojan.yauriaylas.3">Jhojan Yauri</a>
+				</p>
 
 		</div>
 
